Implementação Completa: NOC, Monitoramento, Simulador 2.0 e DataSeeder